--- a/project.tex
+++ b/project.tex
@@ -1,16 +1,30 @@
 \documentclass[a4paper,11point]{book}
+\usepackage{tabularx}
+\usepackage{ifthen}
 
-
+\renewcommand{\familydefault}{\sfdefault}
+\setcounter{tocdepth}{2}
 
 \title{Commonplace book}  
 \author{Steven Powell}
 
 
+\newcommand{\hugeQuote}[5]{
+	\refstepcounter{section}
+	\addcontentsline{toc}{section}{\protect\numberline{\thesection}#2}
+	\label{#1}
+	\noindent
+	\begin{tabularx}{\textwidth}{ XlrX }
+  		&\multicolumn{2}{p{0.8\linewidth}}{\Huge{#2}\Huge{#3}} &\\ 
+  		& \ifthenelse{\equal{}{#5}}{}{cf. #5} & #4 & \\
+	\end{tabularx}
+	\vfill
+}
+
 \begin{document}
-
-\frontmatter
-\maketitle
-
+\maketitle{}
+\tableofcontents
+\newpage
 
 \chapter{Focus}
 \input{Focus.tex}
