add content up to p27

--- a/Action.tex
+++ b/Action.tex
@@ -1,5 +1,25 @@
 
+\smallQuote{BD_ACT}{Action may not always bring ahppiness, but without action there is none}{Benjamin Disraelli}
+
+\newpage 
+
+\hugeQuote{LT_FAT}{Fac aut tace}{}{}{}{Do or be silent}
+
+\hugeQuote{FB_CWA}{Code wins}{}{}{}{}
+
+\hugeQuote{RG_DDX}{Demonstrate}{ don't explicate}{Robert Greene}{}{}
+
+\hugeQuote{MG_AEP}{Action expresses priority}{}{Mahatma Ghandi}{}{}
+
+\newpage
+
+\hugeQuote{AR_HABIT}{Quality is not an act.}{ It is a habit.}{Aristotle}{}{}
+\hugeQuote{RH_HABIT}{How you do anything is how you do everything}{}{Ryan Holiday}{}{}
+\hugeQuote{MLK_HABIT}{If I cannot do great things}{I can do small things in a great way}{Martin Luther King Jr.}{}{}
+
+\newpage
 
 
-\hugeQuote{MG_AEP}{Action expresses priority}{}{Mahatma Ghandi}{}
-\hugeQuote{FB_CWA}{Code wins}{}{}{}
+
+
+
