--- a/project.tex
+++ b/project.tex
@@ -16,7 +16,7 @@
 	\addcontentsline{toc}{section}{\protect\numberline{\thesection}#2}
 	\label{#1}
 	
-	\begin{tabularx}{0.99\textwidth}{ lp{0.8\textwidth}r }
+	\begin{tabularx}{\textwidth}{ lp{0.8\textwidth}r }
   		&\huge{#2}\huge{#3} &
   		\tabularnewline \tabularnewline
   		\ifthenelse{\equal{}{#5}}{}{cf. \ref{#5}}& & #4  
