add quote from epictetus

--- a/Focus.tex
+++ b/Focus.tex
@@ -40,6 +40,8 @@ or (more accurately) do what's essential because most of what we say and do is n
 
 Ask yourself at every moment "is this necessary?"}{Marcus Aurelius}{}{}
 
+\hugeQuote{EP_FOOL}{If you wish to improve}{, be content to appear clueless or stupid in extraneous matters}{Epictetus}{}{}
+
 \newpage
 
 \hugeQuote{OW_HW}{Hard work}{ is simply the refuge of people how have nothing better to do}{Oscar Wilde}{}{}
