add Shakespeare quote

--- a/Resilience.tex
+++ b/Resilience.tex
@@ -20,3 +20,6 @@ But the hardest thing of all is to act in acordance with your thinking}{John Von
 
 \hugeQuote{H_RAZOR}{Hanlon's Razor}{: \newline
 Never attribute to malice that which can be adequately explained by incompetence}{Robert J. Hanlon}{}{or weakness or fear}
+
+
+\hugeQuote{S_THINK}{Nothing either good nor bad}{but thinking makes it so}{Shakespeare}{}{}
