add Horace quote
Found in great thinkers.

--- a/Learning.tex
+++ b/Learning.tex
@@ -8,3 +8,6 @@
 
 \hugeQuote{RG_LATE}{You think you are doing fine}{ you are not compelled to adapt until it is too late}{Robert Greene}{}{}
 
+%\hugeQuote{}{}{}{}{}{}
+
+\hugeQuote{H_ART}{The art lies in}{ concealing the art}{Horace}{}{}
