add content up to page 41

--- a/Leadership.tex
+++ b/Leadership.tex
@@ -20,3 +20,18 @@
 \hugeQuote{RG_DO}{Pay less attention}{ to the words people use and greater attention to the tone of their voice, the look in their eyes and their body language}{Robert Green}{}{}
 
 \hugeQuote{BW_TALK}{There is no use talking about the problem}{ unless you talk about the solution}{Betty Williams}{}{}
+
+
+
+\hugeQuote{TP_UNDER}{Under promise;}{\newline 
+over deliver}{Tom Peters}{}{}
+
+\hugeQuote{HF_REP}{You can't build a reputation}{ on what you're going to do}{Henry Ford}{}{}
+
+\hugeQuote{RG_BOAST}{Be careful not to baost}{ of any success}{Robert Greene}{}{}
+
+\hugeQuote{SP_QUIET}{Be quiet}{, work hard, stay healthy}{}{}{}
+
+\cleardoublepage
+
+\hugeQuote{SC_BAD}{\texttt{use strict;}}{\newline good servant, \newline bad master.}{Simon Cozens}{}{}
