--- a/Learning.tex
+++ b/Learning.tex
@@ -11,3 +11,5 @@
 %\hugeQuote{}{}{}{}{}{}
 
 \hugeQuote{H_ART}{The art lies in}{ concealing the art}{Horace}{}{}
+
+\smallQuote{M_WORK}{If people knew how hard I worked, it would not seem so masterful}{Michelangelo}{}{}
