--- a/Resilience.tex
+++ b/Resilience.tex
@@ -13,13 +13,83 @@
 
 \hugeQuote{JVG_ACT}{To think is easy}{\newline
 To act is hard\newline
-But the hardest thing of all is to act in acordance with your thinking}{John Von Goethe}{}{}
-
-\hugeQuote{KZ_LTS}{You can't stop the waves}{\newline but you can learn to surf.}{John Kabat Zinn}{}{}
-
+But the hardest thing of all is to act in accordance with your thinking}{John Von Goethe}{}{}
 
 \hugeQuote{H_RAZOR}{Hanlon's Razor}{: \newline
 Never attribute to malice that which can be adequately explained by incompetence}{Robert J. Hanlon}{}{or weakness or fear}
 
 
-\hugeQuote{S_THINK}{Nothing either good nor bad}{but thinking makes it so}{Shakespeare}{}{}
+\newpage
+
+\smallQuote{CD_PROMISE}{Promise yourself to be so strong that nothing can disturb your peace of mind}{Christian D'Larson}{}{}
+
+\smallQuote{RH_EFFORT}{You control the effort not the results}{Ryan Holiday}{}{}
+
+\newpage
+
+\hugeQuote{MA_CONTROL}{We control our own actions}{ and are responsible for them.
+
+If we act wrongly we have done serious harm to ourselves}{Marcus Aurelius}{}{}
+
+\hugeQuote{MA_DWH}{Does what happened}
+{ stop you from acting with justice, generosity, self control, sanity, prudence, honesty and stright forwardness?}{Marcus Aurelius}{}{}
+
+
+\newpage
+
+\smallQuote{S_BTR}{The world loves to blacken the radiant and drag the sublime through the dust}{Schiller}{}{}
+
+\smallQuote{TS_HHH}{Haters gonna hate, hate, hate, hate, hate}{Taylor Swift}{}{}
+
+\clearpage
+
+\hugeQuote{DLP_DNA}{You don't need their approval}{}{Danielle La Porte}{}{}
+\hugeQuote{ST_UTU}{Ta eph'hemin}{\newline ta ouk eph'hemin}{Stoic phrase}{}{what is up to us \newline what is not up to us}
+
+\hugeQuote{MA_TC}{Tranquility comes when you stop caring what they say}{}{Marcus Aurelius}{}{}
+
+
+\cleardoublepage
+
+
+\hugeQuote{S_PROBLEMS}{Nothing either good nor bad}{ but thinking makes it so}{Shakespeare}{}{}
+
+\hugeQuote{TNV_PROBLEMS}{Real difficulties can be overcome}{\newline 
+It's only the imaginary ones that are unconquerable}{Theodore N Vail}{}{}
+
+\hugeQuote{RH_PROBLEMS}{Problems are rarely as bad as we think they are}
+{, or rather, they are precisely as bad as we think they are}{Ryan Holiday}{}{}
+
+\hugeQuote{MA_PROBLEMS}{External things are not the problem.}{ It's your assessment of them which you can erase right now}{Marcus Aurelius}{}{}
+
+\newpage
+
+\hugeQuote{RH_ENDURE}{See things for what they are,}{\newline
+do what we can,\newline
+endure what we must}{Ryan Holiday}{}{}
+
+\hugeQuote{S_ENDURE}{Not to give in}{to adversity,\newline
+not to trust prosperity,\newline
+and always take note of Fortune's habit of behaving exactly as she pleases}{Seneca}{}{}
+
+\hugeQuote{JKZ_ENDURE}{You can't stop the waves}{ but you can learn how to surf}{Jon Kabat Zin}{}{}
+
+\clearpage
+
+\smallQuote{JB_ALONE}{All of our unhappiness comes from our inability to be alone}{Jean de la Brugere}{}{}
+\smallQuote{GVG_ALONE}{A bore is someone who deprives you of solitude without providing you with company}
+{Gian Vincenzo Gravina}{}{}
+\smallQuote{RG_ALONE}{Strive to keep yourself free from unnecessary entanglements and alliances}{Robert Greene}{}{}
+
+\clearpage
+
+\hugeQuote{A_ALONE}{Happiness depends on ourselves}{}{Aristotle}{}{}
+
+\hugeQuote{RWE_ALONE}{Nothing can bring you peace but yourself.\newline
+Nothing can bring you peace but the triumph of principles}{Ralph Waldo Emerson}{}{}
+
+\hugeQuote{MA_ALONE}{Everyone gets one life.}{ Your's is almost up and instead of treating yourself with respect
+you have entrusted your happiness to others.}{Marcus Aurelius}{}{}
+
+\clearpage
+
