add content up to page 69

--- a/Focus.tex
+++ b/Focus.tex
@@ -25,7 +25,7 @@
 \hugeQuote{PL_DST}{Don't spend time with people you don't like}{}{Prue Leith}{}{}
 \hugeQuote{LC_COMPANY}{You are }{whatever the company you keep is}{Lord Chesterfield}{}{}
 
-\hugeQuote{C_HONOR}{Let your mind dwell}{ on examples of honor}{Cicero}{}{} % cf machiavelli
+\hugeQuote{C_HONOR}{Let your mind dwell}{ on examples of honor}{Cicero}{}{} % cf machiavelli ?
 
 \clearpage
 
