--- a/Leadership.tex
+++ b/Leadership.tex
@@ -35,3 +35,23 @@ over deliver}{Tom Peters}{}{}
 \cleardoublepage
 
 \hugeQuote{SC_BAD}{\texttt{use strict;}}{\newline good servant, \newline bad master.}{Simon Cozens}{}{}
+
+
+\hugeQuote{LZ_CHIEF}{Be the chief}{ but never the lord}{Lao Tzu}{}{}
+\hugeQuote{KR_SPORT}{One man practicing sportsmanship}{ is better than 100 teaching it}{Knute Roche}{HF_REP}{}
+
+
+
+
+\smallQuote{RH_RAW}{Races are won here not there. Where it is hardest to speed up not easiest}{Ryan Holiday}{}
+\hugeQuote{RH_HMY}{Life is defined by how much you do}{, how often you took the difficult path and were rewarded for it}{Ryan Holiday}{}{(not by how much you own)}
+
+\hugeQuote{S_EFFORT}{Super-human effort}{ is not worth a damn unless it produces results}{Shackleton}{}{}
+\hugeQuote{BAML_RERR}{Recognise effort}{\newline
+Reward results}{BAML}{}{}
+\hugeQuote{RH_CCNC}{Close captures no crowns}{}{Ryan Holiday}{}{}
+\hugeQuote{RL_LISTEN}{Learning to listen}{ is the most valuable thing you can do}{Robert Love}{AC_DO}{}
+\hugeQuote{RG_KNOW}{The ability to measure people}{ abd know who you're dealing with is the most important skill of all}{Robert Greene}{AE_DO}{}
+
+
+\hugeQuote{CF_DNI}{Do not impose on others}{ what you yourself do not desire}{Confucious}{}{}
