--- a/Resilience.tex
+++ b/Resilience.tex
@@ -44,7 +44,8 @@ If we act wrongly we have done serious harm to ourselves}{Marcus Aurelius}{}{}
 \clearpage
 
 \hugeQuote{DLP_DNA}{You don't need their approval}{}{Danielle La Porte}{}{}
-\hugeQuote{ST_UTU}{Ta eph'hemin}{\newline ta ouk eph'hemin}{Stoic phrase}{}{what is up to us \newline what is not up to us}
+\hugeQuote{ST_UTU}{Ta eph'hemin}{\newline
+Ta ouk eph'hemin}{Stoic phrase}{}{what is up to us, what is not up to us.}
 
 \hugeQuote{MA_TC}{Tranquility comes when you stop caring what they say}{}{Marcus Aurelius}{}{}
 
@@ -69,7 +70,7 @@ do what we can,\newline
 endure what we must}{Ryan Holiday}{}{}
 
 \hugeQuote{S_ENDURE}{Not to give in}{to adversity,\newline
-not to trust prosperity,\newline
+not to trust prosperity,\newline \newline
 and always take note of Fortune's habit of behaving exactly as she pleases}{Seneca}{}{}
 
 \hugeQuote{JKZ_ENDURE}{You can't stop the waves}{ but you can learn how to surf}{Jon Kabat Zin}{}{}
@@ -85,11 +86,22 @@ and always take note of Fortune's habit of behaving exactly as she pleases}{Sene
 
 \hugeQuote{A_ALONE}{Happiness depends on ourselves}{}{Aristotle}{}{}
 
-\hugeQuote{RWE_ALONE}{Nothing can bring you peace but yourself.\newline
+\hugeQuote{RWE_ALONE}{Nothing can bring you peace but yourself.}{\newline
 Nothing can bring you peace but the triumph of principles}{Ralph Waldo Emerson}{}{}
 
 \hugeQuote{MA_ALONE}{Everyone gets one life.}{ Your's is almost up and instead of treating yourself with respect
 you have entrusted your happiness to others.}{Marcus Aurelius}{}{}
 
 \clearpage
+
+
+\hugeQuote{LT_CH}{He who conquers others is strong}{, he who conquers himeself is mighty}{Lao Tzu}{}{}
+
+
+\smallQuote{CF_SUCCESS}{Success depends on previous preparation, and without such preparation there can be no success}{Confucius}{}
+
+
+\hugeQuote{OS_OPTIMISM}{Optimism is cowardice}{}{Oswald Spengler}{}{}
+\hugeQuote{HOPE}{Hope is a poor hedge}{}{Erik R. Sirri}{}{2007, but likely earlier}
+\hugeQuote{SP_LUCK}{Preparation}{ not luck}{}{}{}
 
