--- a/Humility.tex
+++ b/Humility.tex
@@ -1,2 +1,19 @@
+
+\smallQuote{MA_NO}{No chorus of lamentation, No hysterics}{Marcus Aurelius}{}
+
+\clearpage
+
 \hugeQuote{MT_VISIT}{If you're not humble}{ life will visit humility upon you}{Mike Tyson}{}{}
+\hugeQuote{ST_GUIDE}{He who does not emply a guide cannot gain advantage from the ground}{}{Sun Tzu}{}{}
+\hugeQuote{DLP_HELP}{Take the help}{}{Danielle La Porte}{}{}
+
+\hugeQuote{RH_LIVE}{Learn as if you were going to live}{ but live as if you were going to die tomorrow.}{via Ryan Holiday}{}{}
+\hugeQuote{IP_GAME}{Afterr the game}{ the king and the pawn go back into the same box}{Italian Proverb}{}{}
+\hugeQuote{MA_LIVE}{You could leave this life right now.}{ Let that determine how you act.}{Marcus Aurelius}{}{}
+\hugeQuote{MDM_LOSS}{Certainly, if a man of understanding still has himself, he has lost nothing.}{}{Michel De Montaigne}{}{}
+\hugeQuote{E_LUCK}{Foolish is the man who delights in his good fortune, supposing it will never leave him.}{}{Euripides}{S_ENDURE}{}
+\hugeQuote{MA_LUCK}{To accept it without arrogance,}{\newline
+to let it go with indifference}{Marcus Aurelius}{}{}
+
+\hugeQuote{RWE_STARS}{If the stars were to appear but one night every thousand years}{ how man would marvel}{Ralph Waldo Emerson}{}{}
 
