--- a/project.tex
+++ b/project.tex
@@ -16,13 +16,13 @@
 	\addcontentsline{toc}{section}{\protect\numberline{\thesection}#2}
 	\label{#1}
 	
-	\begin{tabularx}{\textwidth}{ lp{0.8\textwidth}r }
-  		&\huge{#2} \huge{#3} &
+	\begin{tabularx}{\textwidth}{ lr}
+  		\multicolumn{2}{p{1.0\textwidth} }{\huge{#2}\huge{#3}}
   		\tabularnewline \tabularnewline
-  		\ifthenelse{\equal{}{#5}}{}{cf. \ref{#5}}& \multicolumn{2}{r}{#4}  
+  		\ifthenelse{\equal{}{#5}}{}{cf. \ref{#5}}& #4
   		\tabularnewline
   		\tabularnewline
-  		& #6 &
+  		\multicolumn{2}{l}{#6} 
 	\end{tabularx}
 	\bigskip
 	\hrulefill
@@ -31,12 +31,12 @@
 
 \newcommand{\smallQuote}[4] {
 	
-	\begin{tabularx}{\textwidth}{ XlrX }
-  		&\multicolumn{2}{p{0.90\linewidth}}
-  		{\large{#2}}\label{#1} & 
+	\begin{tabularx}{\textwidth}{ lp{0.8\textwidth} }
+  		&{\large{#2}}\label{#1} 
   		\tabularnewline 
   		\tabularnewline
-  		&\ifthenelse{\equal{}{#4}}{}{cf. \ref{#4}} & #3 & 
+  		\ifthenelse{\equal{}{#4}}{}{cf. \ref{#4}} & 
+  		\multicolumn{1}{r}{#3}
   		\tabularnewline
 	\end{tabularx}
 	\bigskip
