add content up to p85 and tweaked formatting

--- a/Confidence.tex
+++ b/Confidence.tex
@@ -1,7 +1,5 @@
-
-
 \smallQuote{RG_CHAOS}{Let go and move with the chaos that presents itself to you. 
-From within it you will find endless oppourtunities that elude other people}{Robert Greene}
+From within it you will find endless oppourtunities that elude other people}{Robert Greene}{}
 
 
 \hugeQuote{AN_COURAGE}{Life shrinks or expands}{ in proportion to one's courage.}{Anais Nin}{JKZ_ENDURE}{}
@@ -14,10 +12,12 @@ From within it you will find endless oppourtunities that elude other people}{Rob
 
 \smallQuote{RG_FAIL}{Any knid of resistance or obstacle that crosses your path should be seen as yet another chance to improve your work}{Robert Green}{}
 
-\smallQuote{CP_FAIL}{You can adopt the attitude that there's nothing you can do, or you can see the challenge as a call to action}{Catherine Pulsifer}{}
-\smallQuote{RH_FAIL}{You've already made it this far, might as well take one more step}{Ryam Holiday}{}%fall seven stand eight
+\hugeQuote{CP_FAIL}{You can adopt the attitude that there's nothing you can do}{, or you can see the challenge as a call to action}{Catherine Pulsifer}{}{}
+\smallQuote{RH_FAIL}{You've already made it this far, might as well take one more step}{Ryan Holiday}{} %fall seven stand eight
 \smallQuote{MA_FAIL}{But to get back up when you fail, to celebrate behaving like a human (however imperfectly) and fully embrace the pursuit you've embarked on.}{Marcus Aurelius}{}
 
 \hugeQuote{DLP_FAIL}{You will fail eventually.}{\newline
 Whatever.}{Danielle La Parte}{MA_DWH}{}
 \hugeQuote{NT_FAIL}{A mistake is not something to be determined after the fact}{ but in the light of information up to that point}{Nassim Taleb}{}{}
+
+\smallQuote{SP_FAIL}{A failed attempt is just that and nothing more, it’s not the end and it’s not fatal. Keep at it.}{}{}
