--- a/Humility.tex
+++ b/Humility.tex
@@ -17,3 +17,12 @@ to let it go with indifference}{Marcus Aurelius}{}{}
 
 \hugeQuote{RWE_STARS}{If the stars were to appear but one night every thousand years}{ how man would marvel}{Ralph Waldo Emerson}{}{}
 
+
+\hugeQuote{RH_CHANGE}{Your opinion is either dependent on the facts or it's not;}{\newline
+When they change you should shift along with them}{Ryan Holiday}{JKZ_ENDURE}{The facts were always there, of course, just unclear or hidden. Think clearly about what you're looking at. cf \ref{NT_FAIL}}
+
+
+\hugeQuote{MA_CHANGE}{Remember that to change your mind}{ and accept correction are mere acts too}{Marcus Aurelius}{}{and so, under our control}
+
+
+\hugeQuote{JS_FOLLY}{It is the folly of many}{ to mistake the echo of a London coffee shop for the voice of a kingdom}{Jonathan Swift}{}{}
