--- a/Resilience.tex
+++ b/Resilience.tex
@@ -105,3 +105,29 @@ you have entrusted your happiness to others.}{Marcus Aurelius}{}{}
 \hugeQuote{HOPE}{Hope is a poor hedge}{}{Erik R. Sirri}{}{2007, but likely earlier}
 \hugeQuote{SP_LUCK}{Preparation}{ not luck}{}{}{}
 
+\hugeQuote{MA_PERSIST1}{So keep at it}{ until it's fully digested.\newline
+A strong stomach digests whatever it eats.\newline
+A blazing fire takes whatever you throw on it and makes light and flame.}{Marcus Aurelius}{CP_FAIL}{}
+
+\hugeQuote{MAR_PERSIST}{Courage doesn't always roar.}{\newline
+Sometimes courage is the quiet voice at the end of the day whispering "I will try again tomorrow"}{Mary Anne Radmach}{MA_PERSIST2}{}
+
+\hugeQuote{MA_PERSIST2}{Disgraceful}{ for the soul to give up while the body is still going strong}{Marcus Aurelius}{}{}
+
+
+
+\hugeQuote{MA_HARM1}{Choose not to be harmed}{ and you won't feel harmed\newline
+Don't feel harmed and you haven't been}{Marcus Aurelius}{}{}
+\hugeQuote{MA_HARM2}{It can ruin your life}{ only if it ruins your character. Otherwise it cannot harm you. Inside or out}{Marcus Aurelius}{}{}
+
+
+\smallQuote{RG_TRUST}{Trust yourself more and others less}{Robert Greene}{}
+\smallQuote{WS_TRUST}{Love all\newline
+Trust a few\newline
+Do wrong to none}{William Shakespeare}{}
+%TODO: check w/maddie for wording 
+%\smallQuote{MI_TRUST}{You'll get three mentors you can trust.}{Madalina Idomir}{from her teacher, but we'll share the credit.}
+
+
+
+
