--- a/project.tex
+++ b/project.tex
@@ -22,7 +22,7 @@
   		\ifthenelse{\equal{}{#5}}{}{cf. \ref{#5}}& #4
   		\tabularnewline
   		\tabularnewline
-  		\multicolumn{2}{l}{#6} 
+  		\multicolumn{2}{p{1\textwidth}}{#6} 
 	\end{tabularx}
 	\bigskip
 	\hrulefill
@@ -36,7 +36,7 @@
   		\tabularnewline 
   		\tabularnewline
   		\ifthenelse{\equal{}{#4}}{}{cf. \ref{#4}} & 
-  		\multicolumn{1}{r}{#3}
+  		\multicolumn{1}{p{1\textwidth}}{#3}
   		\tabularnewline
 	\end{tabularx}
 	\bigskip
@@ -88,7 +88,6 @@
 
 \chapter{Generosity}
 \input{Generosity.tex}
-
 
 
 \end{document}
