add Huge Quote initial version

--- a/Focus.tex
+++ b/Focus.tex
@@ -36,9 +36,9 @@ See: \href{http://bit.ly/1EDPjUQ}{efficacy hacks} and \href{http://bit.ly/1EDPu2
 
 \hugeQuote{MA_DL}{If you seek tranquility, do less}{
 \newline
-or (more accurately) do what's essential because most of what we say and do is not essential
-
-Ask yourself at every moment "is this necessary?"}{Marcus Aurelius}{}{}
+or (more accurately) do what's essential because most of what we say and do is not essential\newline
+Ask yourself at every moment "is this necessary?"}
+{Marcus Aurelius}{}{}
 
 \hugeQuote{EP_FOOL}{If you wish to improve}{, be content to appear clueless or stupid in extraneous matters}{Epictetus}{}{}
 
@@ -52,4 +52,7 @@ Ask yourself at every moment "is this necessary?"}{Marcus Aurelius}{}{}
 \newpage
 \hugeQuote{PL}{Parkinson's Law}{:\newline
 A task will swell in (perceived) importance and complexity in relation to the time allocated for its completion.}{}{}{}
+
+
+\HugeQuote{MA_OBSERVE}{And so I'll treat them as the law that binds us requires}{. \newline With kindness and with justice.\newline And the inconsequential things?\newline I'll do my best to treat them as they deserve.}{Marcus Aurelius}{}{}
 
