add content up to p 89

--- a/Resilience.tex
+++ b/Resilience.tex
@@ -131,3 +131,14 @@ Do wrong to none}{William Shakespeare}{}
 
 
 
+\HugeQuote{MA_LUCK}{I was once s fortunate man}{, then fortune deserted me.\newline
+\newline
+But true good fortune is what you make for yourself.
+
+Good fortune:
+\begin{itemize}
+  \item good character
+  \item good intentions
+  \item good actions
+\end{itemize}}\newline
+{Marcus Aurelius}{E_LUCK}{}
