add content up to p93

--- a/Resilience.tex
+++ b/Resilience.tex
@@ -112,7 +112,7 @@ A blazing fire takes whatever you throw on it and makes light and flame.}{Marcus
 \hugeQuote{MAR_PERSIST}{Courage doesn't always roar.}{\newline
 Sometimes courage is the quiet voice at the end of the day whispering "I will try again tomorrow"}{Mary Anne Radmach}{MA_PERSIST2}{}
 
-\hugeQuote{MA_PERSIST2}{Disgraceful}{ for the soul to give up while the body is still going strong}{Marcus Aurelius}{}{}
+\HugeQuote{MA_PERSIST2}{Disgraceful}{ for the soul to give up while the body is still going strong}{Marcus Aurelius}{}{}
 
 
 
@@ -142,3 +142,5 @@ Good fortune:
   \item good actions
 \end{itemize}}\newline
 {Marcus Aurelius}{E_LUCK}{}
+
+
