add remaining content

--- a/Action.tex
+++ b/Action.tex
@@ -17,3 +17,9 @@
 \hugeQuote{MA_NOW2}{Stick to what's infront of you}{; \newline
 Idea, action, utterance}{Marcus Aurelius}{}{}
 
+
+\smallQuote{MA_CREDIT}{Do what nature demands. Get a move on if you have it in you and don't worry whether anyone will give you any credit for it.
+And don't go expecting Plato's "Republic" either, just be satisfied with even the smallest progress}{Marcus Aurelius}{}
+
+
+\hugeQuote{HT_CREDIT}{It's amazing what you can accomplish}{ if you don't care who gets the credit}{Harry S Truman}{}{}
