--- a/Humility.tex
+++ b/Humility.tex
@@ -12,7 +12,7 @@
 \hugeQuote{MA_LIVE}{You could leave this life right now.}{ Let that determine how you act.}{Marcus Aurelius}{}{}
 \hugeQuote{MDM_LOSS}{Certainly, if a man of understanding still has himself, he has lost nothing.}{}{Michel De Montaigne}{}{}
 \hugeQuote{E_LUCK}{Foolish is the man who delights in his good fortune, supposing it will never leave him.}{}{Euripides}{S_ENDURE}{}
-\hugeQuote{MA_LUCK}{To accept it without arrogance,}{\newline
+\hugeQuote{MA_LUCK1}{To accept it without arrogance,}{\newline
 to let it go with indifference}{Marcus Aurelius}{}{}
 
 \hugeQuote{RWE_STARS}{If the stars were to appear but one night every thousand years}{ how man would marvel}{Ralph Waldo Emerson}{}{}
@@ -26,3 +26,20 @@ When they change you should shift along with them}{Ryan Holiday}{JKZ_ENDURE}{The
 
 
 \hugeQuote{JS_FOLLY}{It is the folly of many}{ to mistake the echo of a London coffee shop for the voice of a kingdom}{Jonathan Swift}{}{}
+
+%possible link to seneca quote about /thoughts at the door/
+\HugeQuote{MA_ALWAYS}{Everywhere, at each moment, you have the option}{:
+\begin{itemize}
+\item to accept this event with humility
+\item to treat each person as he should be treated
+\item to approach this thought with care, so that nothing irrational creeps in
+\end{itemize}}{Marcus Aurelius}{WG_JUDGE}{}
+
+
+\hugeQuote{MA_MISTAKE}{That you've made enough mistakes yourself}{. Your just like them.}{Marcus Aurelius}{SL_GIVE}{}
+
+\hugeQuote{MA_EXIT}{So make your exit}{ with grace\newline
+the same grace shown too you}{Marcus Aurelius}{}{}
+
+
+\hugeQuote{ME_BEGIN}{Be willing}{ to be a beginner every single morning}{Meister Eckhart}{EP_FOOL}{}
