--- a/Leadership.tex
+++ b/Leadership.tex
@@ -1,4 +1,16 @@
-\smallQuote{BB_PRACTICE}{When you are not practicing remember that someone else is and when you meet him he will win.}{Bill Bradley}
+
+
+
+%TODO: review
+%\hugeQuote{FM_WAC}{We are the champions}{, my friends\newline
+%And we'll keep on fighting 'til the end\newline
+%We are the champions\newline
+%We are the champions\newline
+%No time for losers\newline
+%'Cause we are the champions of the world}{Freddy Mercury}{}
+
+
+\smallQuote{BB_PRACTICE}{When you are not practicing remember that someone else is and when you meet him he will win.}{Bill Bradley}{}
 
 \newpage
 
@@ -17,7 +29,7 @@
 
 \newpage
 
-\hugeQuote{RG_DO}{Pay less attention}{ to the words people use and greater attention to the tone of their voice, the look in their eyes and their body language}{Robert Green}{}{}
+\hugeQuote{RG_DO}{Pay less attention}{ to the words people use and greater attention to the tone of their voice, the look in their eyes and their body language}{Robert Green}{MA_LISTEN}{}
 
 \hugeQuote{BW_TALK}{There is no use talking about the problem}{ unless you talk about the solution}{Betty Williams}{}{}
 
@@ -55,3 +67,29 @@ Reward results}{BAML}{}{}
 
 
 \hugeQuote{CF_DNI}{Do not impose on others}{ what you yourself do not desire}{Confucious}{}{}
+
+
+
+\HugeQuote{MA_LISTEN}{Practice really hearing}{ what people say.\newline
+Do your best to get inside their minds}{Marcus Aurelius}{RL_LISTEN}{}
+
+
+\hugeQuote{MA_ASK}{Learn to ask of all actions}{, "why are they doing that?"\newline
+Starting with your own.}{Marcus Aurelius}{H_RAZOR}{}
+
+
+
+\hugeQuote{MA_CONTROL1}{If it's in your control why do it?}{ If it's in someone else's then who are you blaming?\newline
+Blame no one\newline
+Set people straight if you can. If not just repair the damage}{Marcus Aurelius}{SL_GIVE}{}
+
+\hugeQuote{MA_CORRECT}{If they've done something wrong}{, correct them gently and show them how to improve.\newline
+If you can't do that the blame lies with you or no one}{Marcus Aurelius}{HT_CREDIT}{}
+
+
+\hugeQuote{MA_PURPOSE}{To undertake nothing}{:
+\begin{itemize}
+\item without purpose or at random
+\item for any other reason than the common good
+\end{itemize}
+}{Marcus Aurelius}{TF_SLO}{}{}
