--- a/Patience.tex
+++ b/Patience.tex
@@ -6,3 +6,11 @@ If there is a prospect of vicory move; \newline
 If there is no prospect of victory do not move.}{Sun Tzu}{}{}
 
 \hugeQuote{RG_WAIT}{Impatience}{: perhaps the single greatest pitfall}{Robert Greene}{}{}
+
+\hugeQuote{MA_GRIEF}{How much more damage grief and ager do}{ than the things that caused them}{Marcus Aurelius}{}{}
+
+
+\hugeQuote{UG_COUNT}{There are always more of them}{ before they are counted}{Ulysses S Grant}{RH_ENDURE}{}
+
+%TODO seneca at the door
+\hugeQuote{WG_JUDGE}{The senses don't decieve}{ judgement deceives}{Goethe}{}{}
