--- a/Resilience.tex
+++ b/Resilience.tex
@@ -1,8 +1,4 @@
 
-
-
-
-
 \smallQuote{FN_TIRED}{When we are tired we are attacked by ideas we conquered long ago.}{Friedrich Nietzche}{}
 
 \smallQuote{CN_MEAT}{All the meat and all that it wants.}{Case, Neuromancer}{}
@@ -27,7 +23,7 @@ Never attribute to malice that which can be adequately explained by incompetence
 
 \newpage
 
-\hugeQuote{MA_CONTROL}{We control our own actions}{ and are responsible for them.
+\hugeQuote{MA_CONTROL2}{We control our own actions}{ and are responsible for them.
 
 If we act wrongly we have done serious harm to ourselves}{Marcus Aurelius}{}{}
 
@@ -39,7 +35,7 @@ If we act wrongly we have done serious harm to ourselves}{Marcus Aurelius}{}{}
 
 \smallQuote{S_BTR}{The world loves to blacken the radiant and drag the sublime through the dust}{Schiller}{}{}
 
-\smallQuote{TS_HHH}{Haters gonna hate, hate, hate, hate, hate}{Taylor Swift}{}{}
+\smallQuote{TS_HHH}{Haters gonna hate, hate, hate, hate, hate}{Taylor Swift}{MA_HATE}{}
 
 \clearpage
 
@@ -59,7 +55,7 @@ Ta ouk eph'hemin}{Stoic phrase}{}{what is up to us, what is not up to us.}
 It's only the imaginary ones that are unconquerable}{Theodore N Vail}{}{}
 
 \hugeQuote{RH_PROBLEMS}{Problems are rarely as bad as we think they are}
-{, or rather, they are precisely as bad as we think they are}{Ryan Holiday}{}{}
+{, or rather, they are precisely as bad as we think they are}{Ryan Holiday}{MA_JUDGE}{}
 
 \hugeQuote{MA_PROBLEMS}{External things are not the problem.}{ It's your assessment of them which you can erase right now}{Marcus Aurelius}{}{}
 
@@ -112,8 +108,11 @@ A blazing fire takes whatever you throw on it and makes light and flame.}{Marcus
 \hugeQuote{MAR_PERSIST}{Courage doesn't always roar.}{\newline
 Sometimes courage is the quiet voice at the end of the day whispering "I will try again tomorrow"}{Mary Anne Radmach}{MA_PERSIST2}{}
 
-\HugeQuote{MA_PERSIST2}{Disgraceful}{ for the soul to give up while the body is still going strong}{Marcus Aurelius}{}{}
+\hugeQuote{MA_PERSIST2}{Disgraceful}{ for the soul to give up while the body is still going strong}{Marcus Aurelius}{}{}
 
+
+\HugeQuote{JP_STAND}{Fall seven times}{\newline
+Stand up eight}{Japanese Proverb}{MA_PERSIST2}{}
 
 
 \hugeQuote{MA_HARM1}{Choose not to be harmed}{ and you won't feel harmed\newline
@@ -131,7 +130,7 @@ Do wrong to none}{William Shakespeare}{}
 
 
 
-\HugeQuote{MA_LUCK}{I was once s fortunate man}{, then fortune deserted me.\newline
+\HugeQuote{MA_LUCK2}{I was once s fortunate man}{, then fortune deserted me.\newline
 \newline
 But true good fortune is what you make for yourself.
 
@@ -140,7 +139,33 @@ Good fortune:
   \item good character
   \item good intentions
   \item good actions
-\end{itemize}}\newline
+\end{itemize}}
 {Marcus Aurelius}{E_LUCK}{}
 
+
+\hugeQuote{MA_SANITY}{Ambition}{: tying your well being to what other people say and do\newline
+Self-indulgence: tying it to the things that happen to you\newline
+Sanity: tying it to your own actions}{Marcus Aurelius}{ST_UTU}{}
+
+
+
+\hugeQuote{MA_STR}{Straight not straightened}{}{Marcus Aurelius}{}{}
+\hugeQuote{MA_MIND1}{What is outside my mind}{ means nothing to it}{Marcus Aurelius}{}{}
+\hugeQuote{MA_MIND2}{The mind without passions}{ is like a fortress. No place is more secure}{Marcus Aurelius}{}{}
+
+
+\hugeQuote{MA_NOW3}{Objective judgment}{ now, at this very moment.\newline
+Unselfish action now, at this very moment.\newline
+Willing acceptance of all external events now, at this very moment.\newline
+That's all you need}{Marcus Aurelius}{}{}
+
+\hugeQuote{MA_JUDGE}{It is we who generate the judgments}{ inscribing them on ourselves}{Marcus Aurelius}{}{}
+
+\hugeQuote{WD_JUDGE}{When you judge another}{ you do not define them, you define yourself.}{Wayne Dyer}{}{}
+
+\hugeQuote{LT_SANITY}{Care about what other people think}{ an you will always be their prisoner}{Lao Tzu}{ST_UTU}{}
+
+
+\hugeQuote{H_TRAVEL}{It is reason and wisdom which take away cares}{\newline
+not places afording views over the sea}{Horace}{A_ALONE}{}
 
