--- a/Focus.tex
+++ b/Focus.tex
@@ -5,8 +5,6 @@
 \clearpage
 
 \smallQuote{RH_LIFERS}{Steer clear of lifers, the toxic and charlatans.\newline You become who you know}{Ryan Holiday}{}
-
-
 \smallQuote{GBS_PIGS1}{Never wrestle with pigs, you both get dirty and the pig likes it}{George Bernard Shaw}{RH_PIGS2}
 
 \smallQuote{DA_CDA}{You can do anything.\newline but you can't do everything.}{David Allen}{}
@@ -29,7 +27,7 @@
 
 \clearpage
 
-\hugeQuote{TF_SLO}{Slow down}{ and remember this;\newline
+\HugeQuote{TF_SLO}{Slow down}{ and remember this;\newline
 Most things make no difference. Being busy is a form of laziness. Lazy thinking and indiscriminate action.}{Tim Ferris}{}{
 See: \href{http://bit.ly/1EDPjUQ}{efficacy hacks} and \href{http://bit.ly/1EDPu2H}{a not to do list}.
 }
@@ -56,3 +54,33 @@ A task will swell in (perceived) importance and complexity in relation to the ti
 
 \HugeQuote{MA_OBSERVE}{And so I'll treat them as the law that binds us requires}{. \newline With kindness and with justice.\newline And the inconsequential things?\newline I'll do my best to treat them as they deserve.}{Marcus Aurelius}{}{}
 
+\hugeQuote{MA_HMYD}{Treat what you don't have as non-existent}{
+	Look at what you have, the things you value most and think how much you'd crave them 
+	if you didn't have them
+}{Marcus Aurelius}{RH_HMY}{}
+
+
+
+\HugeQuote{MA_CUCUMBER}{The cucumber is bitter?}{\newline
+The throw it out.\newline
+There are brambles in the path?\newline
+Then go around them}{Marcus Aurelius}{PL_DST}{}
+
+%TODO: unsure on origin here but likely MA
+\HugeQuote{SP_HABIT}{Four habits to watch for.}{Ask yourself:
+\begin{itemize}
+\item is this thought necessary?
+\item is this destructive to those around me?
+\item is this really what you think?
+\item is this just self indulgent?
+\end{itemize}}{}{}{}
+
+\hugeQuote{MA_GOAL}{If you don't have a consistent goal in life}{, how can you live it in a consistent way?}{Marcus Aurelius}{}{}
+
+
+
+\hugeQuote{S_CUCUMBER}{Get used to your circumstances}{, complain about them as little as possible. Grasp whatever advantages they have to offer}{Seneca}{}{}
+
+\hugeQuote{H_OWN}{They should try to subordinate things to themselves}{ not themselves to things}{Horace}{RH_HMY}{}
+
+\hugeQuote{FC_OWN}{The things you used to own}{. Now they own you}{Jack, Fight Club}{}{}
