--- a/Generosity.tex
+++ b/Generosity.tex
@@ -1,6 +1,5 @@
 
 
-
 \hugeQuote{MA_TRUST}{Tell yourself this}{ the people I deal with today will be:
 \begin{itemize}
 \item meddling
@@ -10,3 +9,27 @@
 \item jealous
 \item surly
 \end{itemize}}{Marcus Aurelius}{SL_GIVE}{People are going to be like that from time to time and so long as you remember that you've been like that too you can see the behaviour for what it is.}
+
+
+\smallQuote{MM_HATE}{Resentment is like taking poison and waiting for the other person to die}{Malachi McCourt}{TS_HHH}
+
+\hugeQuote{MA_HATE}{Someone hates me?}{ Their problem.\newline
+Mine: to be patient and cheeerful with everyone (including them)}{Marcus Aurelius}{}{}
+
+\hugeQuote{RH_HATE}{Because\ldots hate will get you every time}{\newline
+Every time.}{Ryan Holiday}{}{}
+
+
+\hugeQuote{MDM_SELF}{If talking to oneself did not look so mad}{ no day would go by without my growling to myself "you silly shit!"\newline
+Yet, I do not intend that to be the definition of me}{Michel De Montaigne}{HM_DWW}{}
+
+
+\hugeQuote{BT_GIVE}{Always give with remembering}{ and receive without forgetting}{Brian Tracy}{S_DO}{}
+
+
+\hugeQuote{SL_GIVE}{Forgiveness means a long memory of all the times when we wouldn't have gotten through life with someone cutting us some slack.}{ It is recognising that living with others is not possible without excusing errors}{via School of Life}{}{See the modern \href{http://bit.ly/1XoP0tE}{virtues} }
+
+\smallQuote{MA_GIVE}{You've given and they've received it. And yet, like an idiot, you keep holding out for more. To be credited with a good deed? To be repaid in kind? why?}{Marcus Aurelius}{HT_CREDIT}
+
+%Unsure on which chapter
+\hugeQuote{LT_PAST}{Forgiveness means giving up hope}{ of a better past}{Lily Tomlin}{MA_NOW1}{}
