--- a/project.tex
+++ b/project.tex
@@ -50,12 +50,12 @@
 
 \newcommand{\smallQuote}[4] {
 	
-	\begin{tabularx}{\textwidth}{ lp{0.8\textwidth} }
+	\begin{tabularx}{\textwidth}{ p{0.1\textwidth}p{0.8\textwidth} }
   		&{\large{#2}}\label{#1} 
   		\tabularnewline 
   		\tabularnewline
   		\ifthenelse{\equal{}{#4}}{}{cf. \ref{#4}} & 
-  		\multicolumn{1}{p{1\textwidth}}{#3}
+  		\multicolumn{1}{r}{#3}
   		\tabularnewline
 	\end{tabularx}
 	\bigskip
