move to A5 paper

--- a/Focus.tex
+++ b/Focus.tex
@@ -47,14 +47,15 @@ Ask yourself at every moment "is this necessary?"}
 \hugeQuote{RH_PIGS2}{Never try to teach a pig to sing.}{\newline It wastes time and annoys the pig.}{Robert Heinlein}{GBS_PIGS1}{}
 
 
-\newpage
+\clearpage
 \hugeQuote{PL}{Parkinson's Law}{:\newline
 A task will swell in (perceived) importance and complexity in relation to the time allocated for its completion.}{}{}{}
 
 
-\HugeQuote{MA_OBSERVE}{And so I'll treat them as the law that binds us requires}{. \newline With kindness and with justice.\newline And the inconsequential things?\newline I'll do my best to treat them as they deserve.}{Marcus Aurelius}{}{}
+\hugeQuote{MA_OBSERVE}{And so I'll treat them as the law that binds us requires}{. \newline With kindness and with justice.\newline And the inconsequential things?\newline I'll do my best to treat them as they deserve.}{Marcus Aurelius}{}{}
 
 \hugeQuote{MA_HMYD}{Treat what you don't have as non-existent}{
+
 	Look at what you have, the things you value most and think how much you'd crave them 
 	if you didn't have them
 }{Marcus Aurelius}{RH_HMY}{}
@@ -67,12 +68,13 @@ There are brambles in the path?\newline
 Then go around them}{Marcus Aurelius}{PL_DST}{}
 
 %TODO: unsure on origin here but likely MA
-\HugeQuote{SP_HABIT}{Four habits to watch for.}{Ask yourself:
+\HugeQuote{SP_HABIT}{Four habits to watch for.}{\newline
+Ask yourself:
 \begin{itemize}
 \item is this thought necessary?
-\item is this destructive to those around me?
-\item is this really what you think?
-\item is this just self indulgent?
+\item is it destructive to those around me?
+\item is it really what you think?
+\item is it just self indulgent?
 \end{itemize}}{}{}{}
 
 \hugeQuote{MA_GOAL}{If you don't have a consistent goal in life}{, how can you live it in a consistent way?}{Marcus Aurelius}{}{}
