--- a/Resilience.tex
+++ b/Resilience.tex
@@ -65,9 +65,9 @@ It's only the imaginary ones that are unconquerable}{Theodore N Vail}{}{}
 do what we can,\newline
 endure what we must}{Ryan Holiday}{}{}
 
-\hugeQuote{S_ENDURE}{Not to give in}{to adversity,\newline
-not to trust prosperity,\newline \newline
-and always take note of Fortune's habit of behaving exactly as she pleases}{Seneca}{}{}
+\hugeQuote{S_ENDURE}{Not to give in}{to adversity.\newline
+Not to trust prosperity.\newline \newline
+And always take note of Fortune's habit of behaving exactly as she pleases}{Seneca}{}{}
 
 \hugeQuote{JKZ_ENDURE}{You can't stop the waves}{ but you can learn how to surf}{Jon Kabat Zin}{}{}
 
