add index and intro

--- a/project.tex
+++ b/project.tex
@@ -4,6 +4,9 @@
 \usepackage{ifthen}
 \usepackage[hidelinks]{hyperref}
 \usepackage{titlesec}
+\usepackage{makeidx}
+
+
 
 \titleformat{\chapter}[display]
 {\normalfont\Huge\filcenter\sffamily}
@@ -21,10 +24,10 @@
 \renewcommand{\familydefault}{\sfdefault}
 \setcounter{tocdepth}{0}
 \setlength{\parindent}{0cm}
+\makeindex
 
 \title{Commonplace book}  
 \author{Steven Powell}
-
 
 \newcommand{\hugeQuote}[6]{
 	\refstepcounter{section}
@@ -34,7 +37,7 @@
 	\begin{tabularx}{\textwidth}{ lr}
   		\multicolumn{2}{p{1.0\textwidth} }{\huge{#2}\huge{#3}}
   		\tabularnewline \tabularnewline
-  		\ifthenelse{\equal{}{#5}}{}{cf. \ref{#5}}& #4
+  		\ifthenelse{\equal{}{#5}}{}{cf. \ref{#5}}& #4 \index{#4}
   		\ifthenelse{\equal{}{#6}}{}{\tabularnewline \tabularnewline \multicolumn{2}{p{1\textwidth}}{#6}
   		}
 	\end{tabularx}
@@ -43,6 +46,7 @@
 	\vfill
 }
 
+%TODO: refactor for consistency
 \newcommand{\HugeQuote}[6]{
 	\refstepcounter{section}
 	\addcontentsline{toc}{section}{\protect\numberline{\thesection}#2}
@@ -52,7 +56,7 @@
 	\begin{tabularx}{\textwidth}{ lr}
   		\multicolumn{2}{p{1.0\textwidth} }{\huge{#2}\huge{#3}}
   		\tabularnewline \tabularnewline
-  		\ifthenelse{\equal{}{#5}}{}{cf. \ref{#5}}& #4
+  		\ifthenelse{\equal{}{#5}}{}{cf. \ref{#5}}& #4 \index{#4}
   		\tabularnewline
   		\tabularnewline
   		\multicolumn{2}{p{1\textwidth}}{#6} 
@@ -66,13 +70,14 @@
 \newcommand{\smallQuote}[4] {
 	
 	\refstepcounter{section}
+	%TODO: fix layout
 	\begin{tabularx}{\textwidth}{ p{0.1\textwidth}p{0.8\textwidth} }
 
   		&{\large{#2}}\label{#1} 
   		\tabularnewline 
   		\tabularnewline
   		\ifthenelse{\equal{}{#4}}{}{cf. \ref{#4}} & 
-  		\multicolumn{1}{r}{#3}
+  		\multicolumn{1}{r}{#3\index{#3}}
   		\tabularnewline
 	\end{tabularx}
 	\bigskip
@@ -85,10 +90,11 @@
 \maketitle{}
 \tableofcontents
 
-\cleardoublepage
+\chapter{Introduction}
+\input{Introduction.tex}
+
 \chapter{Focus}
 \input{Focus.tex}
-
 
 \chapter{Action}
 \input{Action.tex}
@@ -125,5 +131,10 @@
 \chapter{Generosity}
 \input{Generosity.tex}
 
+\cleardoublepage
+\refstepcounter{chapter}
+\addcontentsline{toc}{chapter}{\protect\numberline{\thechapter}Index}
+
+\printindex
 
 \end{document}
