add command for literal link

--- a/Focus.tex
+++ b/Focus.tex
@@ -29,7 +29,7 @@
 
 \HugeQuote{TF_SLO}{Slow down}{ and remember this;\newline
 Most things make no difference. Being busy is a form of laziness. Lazy thinking and indiscriminate action.}{Tim Ferris}{}{
-See: \href{http://bit.ly/1EDPjUQ}{efficacy hacks} and \href{http://bit.ly/1EDPu2H}{a not to do list}.
+See: efficacy hacks (\llink{http://bit.ly/1EDPjUQ}) and a not to do list (\llink{http://bit.ly/1EDPu2H}).
 }
 
 \hugeQuote{MA_DL}{If you seek tranquility, do less}{
