add preamble for action

--- a/Action.tex
+++ b/Action.tex
@@ -1,3 +1,10 @@
+\cleardoublepage
+Without physical action our plans for improvement simply won't get very far. We need to look at the mamoth task un front of us and take that scary first step (and then the next). 
+Taking action isn't always easy and choosing the right move (cf. \ref{JVG_ACT}) at the right time  
+(cf. \ref{ST_WAIT}) is stupefyingly hard. 
+The hope is though that we won't be paralysed and we will make an impact on the things important to us  
+
+\newpage
 
 \smallQuote{BD_ACT}{Action may not always bring happiness, but without action there is none}{Benjamin Disraelli}{}
 
@@ -23,3 +30,8 @@ And don't go expecting Plato's "Republic" either, just be satisfied with even th
 
 
 \hugeQuote{HT_CREDIT}{It's amazing what you can accomplish}{ if you don't care who gets the credit}{Harry S Truman}{}{}
+
+\HugeQuote{JVG_ACT}{To think is easy}{\newline
+To act is hard\newline
+But the hardest thing of all is to act in accordance with your thinking}{John Von Goethe}{}{}
+
