add content to gratitude chapter

--- a/Humility.tex
+++ b/Humility.tex
@@ -10,12 +10,10 @@
 \hugeQuote{RH_LIVE}{Learn as if you were going to live}{ but live as if you were going to die tomorrow.}{via Ryan Holiday}{}{}
 \hugeQuote{IP_GAME}{Afterr the game}{ the king and the pawn go back into the same box}{Italian Proverb}{}{}
 \hugeQuote{MA_LIVE}{You could leave this life right now.}{ Let that determine how you act.}{Marcus Aurelius}{}{}
-\hugeQuote{MDM_LOSS}{Certainly, if a man of understanding still has himself, he has lost nothing.}{}{Michel De Montaigne}{}{}
+
 \hugeQuote{E_LUCK}{Foolish is the man who delights in his good fortune, supposing it will never leave him.}{}{Euripides}{S_ENDURE}{}
 \hugeQuote{MA_LUCK1}{To accept it without arrogance,}{\newline
-to let it go with indifference}{Marcus Aurelius}{}{}
-
-\hugeQuote{RWE_STARS}{If the stars were to appear but one night every thousand years}{ how man would marvel}{Ralph Waldo Emerson}{}{}
+to let it go with indifference}{Marcus Aurelius}{E_LUCK}{}
 
 
 \hugeQuote{RH_CHANGE}{Your opinion is either dependent on the facts or it's not;}{\newline
