add intro files

--- a/Confidence.tex
+++ b/Confidence.tex
@@ -1,3 +1,5 @@
+\input{ConfidenceIntro.tex}
+
 \smallQuote{RG_CHAOS}{Let go and move with the chaos that presents itself to you. 
 From within it you will find endless oppourtunities that elude other people}{Robert Greene}{}
 
