--- a/Learning.tex
+++ b/Learning.tex
@@ -1,3 +1,5 @@
+\input{LearningIntro.tex}
+
 
 
 \smallQuote{TP_BOOK}{If I read a book and get one good idea from that \$20, then I've gotten one of the greatest deals of all time}{Tom Peters}{}
