--- a/Patience.tex
+++ b/Patience.tex
@@ -1,3 +1,5 @@
+\input{PatienceIntro.tex}
+
 \smallQuote{ADM_CHARGE}{Ask yourself this question:\newline
 Am I in charge of this situation or is this situation in charge of me?}{Anthony De Mello}{}
 
