--- a/Resilience.tex
+++ b/Resilience.tex
@@ -1,3 +1,5 @@
+\input{ResilienceIntro.tex}
+
 
 \smallQuote{FN_TIRED}{When we are tired we are attacked by ideas we conquered long ago.}{Friedrich Nietzche}{}
 
