--- a/Action.tex
+++ b/Action.tex
@@ -1,35 +1,30 @@
-\cleardoublepage
-Without physical action our plans for improvement simply won't get very far. We need to look at the mamoth task un front of us and take that scary first step (and then the next). 
-Taking action isn't always easy and choosing the right move (cf. \ref{JVG_ACT}) at the right time  
-(cf. \ref{ST_WAIT}) is stupefyingly hard. 
-The hope is though that we won't be paralysed and we will make an impact on the things important to us  
-
-\newpage
-
+\input{ActionIntro.tex}
 \smallQuote{BD_ACT}{Action may not always bring happiness, but without action there is none}{Benjamin Disraelli}{}
 
-
-\hugeQuote{LT_FAT}{Fac aut tace}{}{}{}{Do or be silent}
-\hugeQuote{FB_CWA}{Code wins}{}{}{}{}
-\hugeQuote{RG_DDX}{Demonstrate}{ don't explicate}{Robert Greene}{}{}
-\hugeQuote{MG_AEP}{Action expresses priority}{}{Mahatma Ghandi}{}{}
-
-
-\hugeQuote{AR_HABIT}{Quality is not an act.}{ It is a habit.}{Aristotle}{}{}
-\hugeQuote{RH_HABIT}{How you do anything is how you do everything}{}{Ryan Holiday}{}{}
-\hugeQuote{MLK_HABIT}{If I cannot do great things}{I can do small things in a great way}{Martin Luther King Jr.}{}{}
-
 \smallQuote{MA_NOW1}{Each of us lives only now in this brief instant. The rest has been lived already or is impossible to see}{Marcus Aurelius}{}
-
-\hugeQuote{MA_NOW2}{Stick to what's infront of you}{; \newline
-Idea, action, utterance}{Marcus Aurelius}{}{}
-
 
 \smallQuote{MA_CREDIT}{Do what nature demands. Get a move on if you have it in you and don't worry whether anyone will give you any credit for it.
 And don't go expecting Plato's "Republic" either, just be satisfied with even the smallest progress}{Marcus Aurelius}{}
 
+\clearpage
+\HugeQuote{MG_AEP}{Action expresses priority}{}{Mahatma Ghandi}{}{}
+
+\cleardoublepage
+
+\hugeQuote{LT_FAT}{Fac aut tace}{}{}{}{Do or be silent}
+\hugeQuote{FB_CWA}{Code wins}{}{}{}{}
+\hugeQuote{RG_DDX}{Demonstrate}{ don't explicate}{Robert Greene}{}{}
+
+\hugeQuote{AR_HABIT}{Quality is not an act.}{ It is a habit.}{Aristotle}{}{}
+\hugeQuote{RH_HABIT}{How you do anything is how you do everything}{}{Ryan Holiday}{}{}
+\hugeQuote{MLK_HABIT}{If I cannot do great things}{ I can do small things in a great way}{Martin Luther King Jr.}{}{}
+
+\hugeQuote{MA_NOW2}{Stick to what's infront of you}{; \newline
+Idea, action, utterance}{Marcus Aurelius}{}{}
 
 \hugeQuote{HT_CREDIT}{It's amazing what you can accomplish}{ if you don't care who gets the credit}{Harry S Truman}{}{}
+
+\cleardoublepage
 
 \HugeQuote{JVG_ACT}{To think is easy}{\newline
 To act is hard\newline
